--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   <div id="container">
     <div id="main">
       <h1 class="content">My Data App</h1>
+      <div id="userInput">
+        <button id="jerusalemWeather">Jerusalem</button>
+      </div>
 
       <div id="app" class="row">
+
 
         <!-- Start example showing the css layout -->
         <div class="item">
           <div class="content">
-            <h2>Example Heading</h2>
+            <h1 id="jerusalemWeatherText"></h1>
             <p>Example text.</p>
           </div>
         </div>
