--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <html>
 
 <head>
-  <meta charset=utf-8>
-  <title>My Data App</title>
-  <link rel="stylesheet" href="index.css" />
+    <meta charset=utf-8>
+    <title>Weather in random locations</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-  <div id="container">
-    <div id="main">
-      <h1 class="content">My Data App</h1>
-      <div id="userInput">
-        <button id="jerusalemWeather">Jerusalem</button>
-      </div>
+    <div id="container">
+        <div id="main">
+            <h1 class="content">Weather in random locations</h1>
+            <div id="userInput">
+                <button id="jerusalemWeather">Jerusalem</button>
+            </div>
 
-      <div id="app" class="row">
+            <div id="app" class="row">
 
 
-        <!-- Start example showing the css layout -->
-        <div class="item">
-          <div class="content">
-            <h1 id="jerusalemWeatherText"></h1>
-            <p>Example text.</p>
-          </div>
+                <!-- Start example showing the css layout -->
+                <div class="item">
+                    <div class="content">
+                        <h1 id="jerusalemWeatherText"></h1>
+                        <p>Example text.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="content">
+                        <h2>Example Heading</h2>
+                        <p>Example text.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="content">
+                        <h2>Example Heading</h2>
+                        <p>Example text.</p>
+                    </div>
+                </div>
+                <!-- End example showing the css layout -->
+
+            </div>
         </div>
-
-        <div class="item">
-          <div class="content">
-            <h2>Example Heading</h2>
-            <p>Example text.</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="content">
-            <h2>Example Heading</h2>
-            <p>Example text.</p>
-          </div>
-        </div>
-        <!-- End example showing the css layout -->
-
-      </div>
     </div>
-  </div>
-  <script type="module" src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
