--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <div class="sort">
                 <p>Show cities</p>
-                <select id="sortByTemp">
+                <select id="sort-by-temp">
                     <option value="hot-to-cold">Warmest to Coolest</option>
                     <option value="cold-to-hot">Coolest to Warmest</option>
                 </select>
